<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_my_page">MyPage</string>
    <string name="app_name">HAVIT</string>
    <string name="category_entire_category">전체 카테고리</string>
    <string name="modify">수정</string>
    <string name="category_entire">전체 </string>
    <string name="category_category_modify">카테고리 수정</string>
    <string name="category_complete">완료</string>
    <string name="category_notice">카테고리를 누른 뒤 위아래로 드래그하여 순서를 바꿀 수 있습니다</string>
    <string name="category_title">제목</string>
    <string name="category_remove">삭제</string>
    <string name="category_icon">아이콘</string>
    <string name="no_category">카테고리가 아직 없어요</string>
    <string name="add_category">카테고리 추가</string>
    <string name="enter_category">카테고리 제목을 입력하세요</string>
    <string name="title">제목</string>
    <string name="next">다음</string>
    <string name="icon">icon</string>
    <string name="footer_logo">Team HAVIT</string>
    <string name="footer_plan">Plan</string>
    <string name="footer_ios">iOS</string>
    <string name="footer_server">Server</string>
    <string name="footer_design">Design</string>
    <string name="footer_aos">AOS</string>
    <string name="plan_taejoon">박태준</string>
    <string name="plan_jeein">유지인</string>
    <string name="ios_yoonah">신윤아</string>
    <string name="ios_seunghyeon">홍승현</string>
    <string name="ios_yebin">박예빈</string>
    <string name="ios_suyeon">김수연</string>
    <string name="ios_sujin">강수진</string>
    <string name="server_hyosik">주효식</string>
    <string name="server_jeongah">채정아</string>
    <string name="design_minyoung">김민영</string>
    <string name="design_green">정그린</string>
    <string name="design_yujin">한유진</string>
    <string name="aos_hyorim">김효림</string>
    <string name="aos_yubin">최유빈</string>
    <string name="aos_hyein">김혜인</string>
    <string name="aos_nayoung">안나영</string>
    <string name="home_reach_user">님의 목표 달성률</string>
    <string name="home_reach_contents">봐야 하는 콘텐츠</string>
    <string name="home_reach_percent">%</string>
    <string name="home_search">원하는 콘텐츠를 검색하세요</string>
    <string name="home_user_category">님의 카테고리</string>
    <string name="home_category_all">전체보기</string>
    <string name="home_recent_contents">최근 저장 콘텐츠</string>
    <string name="home_more_contents">더보기</string>
    <string name="home_service_use">콘텐츠 저장을 위한 해빗 서비스 이용 방법</string>
    <string name="home_recommend_site">오늘의 추천 사이트</string>
    <string name="home_recommend_havit">다양한 사이트에서 해빗 할 콘텐츠를 탐색해보세요!</string>
    <string name="home_category_empty">아직 카테고리가 없습니다</string>
    <string name="home_category_empty_recommend_create_category">HAVIT에 콘텐츠를 쉽게 저장할 수 있습니다.\n카테고리를 생성하려면 아래를 누르세요.</string>
    <string name="home_category_empty_create_category">카테고리 추가</string>
    <string name="home_contents_empty">저장한 콘텐츠가 없습니다</string>
    <string name="home_category_save">저장 콘텐츠</string>
    <string name="contents_divider">&#160;·&#160;</string>
    <string name="contents_alarm_plan"> 알림 예정</string>
    <string name="contents_order_default">최근순</string>
    <string name="contents_search_hint">원하는 콘텐츠를 검색하세요</string>
    <string name="contents_entire">전체</string>
    <string name="contents_unseen">안 봤어요</string>
    <string name="contents_seen">봤어요</string>
    <string name="save_title">콘텐츠 저장</string>
    <string name="save_info1">링크</string>
    <string name="save_info2">를 입력 및 붙여넣기 하세요</string>
    <string name="save_paste_title">복사한 링크 붙여넣기</string>
    <string name="save_url_valid">입력한 링크의 정보를 찾을 수 없습니다</string>
    <string name="og_image">ogImage</string>
    <string name="modify_title">제목 수정</string>
    <string name="complete">완료</string>
    <string name="set_alarm">알림설정</string>
    <string name="edit_title">edit_title</string>
    <string name="edit_title_description">TIP. 알아보기 쉬운 제목은 어때요?</string>
    <string name="edit_title_kor">콘텐츠 제목을 수정하세요</string>
    <string name="is_selected">isSelected</string>
    <string name="choose_category">카테고리를 선택하세요</string>
    <string name="set_notification_time">알림 받을 시간을 설정하세요</string>
    <string name="logo">logo</string>
    <string name="save_contents">새로운 콘텐츠를 추가했습니다.\nHAVIT은 당신의 성장과 함께해요!</string>
    <string name="contents_empty">아직 저장된 콘텐츠가 없습니다</string>
    <string name="contents_add">콘텐츠 추가</string>
    <string name="webview_unread">콘텐츠 확인하기</string>
    <string name="webview_read">콘텐츠 확인 완료</string>
    <string name="contents_simple_recent_save">최근 저장 콘텐츠</string>
    <string name="contents_simple_unseen">봐야 하는 콘텐츠</string>
    <string name="contents_simple_recent_save_empty">최근 저장 콘텐츠가 없습니다.\n새로운 콘텐츠를 저장해 보세요!</string>
    <string name="contents_simple_unseen_empty">봐야 하는 콘텐츠가 없습니다.\n새로운 콘텐츠를 저장해 보세요!</string>
    <string name="contents_simple_add_contents">콘텐츠 추가</string>
    <string name="choose_icon">카테고리 아이콘을 선택하세요</string>
    <string name="icon_kr">아이콘</string>
    <string name="search_title">검색된 콘텐츠</string>
    <string name="search_cancel">취소</string>
    <string name="search_no_result">검색 결과가 없습니다</string>
    <string name="category_cancel">취소</string>
    <string name="category_delete">삭제</string>
    <string name="category_suggestion">카테고리를 추가해보세요</string>
    <string name="havit_capital_letter">HAVIT</string>
    <string name="now">지금</string>
    <string name="contents_recent_order">최신순</string>
    <string name="contents_past_order">과거순</string>
    <string name="contents_recent_view_order">최근 조회순</string>
    <string name="back_button">back_button</string>
    <string name="button_close">button_close</string>
    <string name="enter_category_title">카테고리 제목 입력</string>
    <string name="save_contents_toolbar">콘텐츠 저장</string>
    <string name="set_alarm_space">알림 설정</string>
    <string name="contents_edit_title">제목 수정</string>
    <string name="contents_edit_share">공유</string>
    <string name="contents_edit_category_move">카테고리 이동</string>
    <string name="contents_edit_alarm">알림 설정</string>
    <string name="contents_edit_delete">삭제</string>
    <string name="notification_topbar">전체 알림</string>
    <string name="mypage_name">님의 활동</string>
    <string name="mypage_percent">%</string>
    <string name="mypage_description1">비상이에요!\n확인하지 않은 콘텐츠가 많이 있어요!</string>
    <string name="mypage_description2">밀린 콘텐츠를 확인해 보는 건 어떨까요?</string>
    <string name="mypage_description3">저장한 콘텐츠가 밀리지 않도록 조심하세요!</string>
    <string name="mypage_description4">축하드려요!\n저장한 콘텐츠를 전부 확인했어요!</string>
    <string name="mypage_category_title">카테고리 수</string>
    <string name="mypage_save_title">저장한 콘텐츠</string>
    <string name="mypage_check_title">확인한 콘텐츠</string>
    <string name="mypage_count">12</string>
    <string name="mypage_count_title">개</string>
    <string name="after_1min">1분 뒤</string>
    <string name="after_24hr">24시간 뒤</string>
    <string name="after_3h">3시간 뒤</string>
    <string name="after_2h">2시간 뒤</string>
    <string name="after_1h">1시간 뒤</string>
    <string name="choose_time">직접 시간 선택</string>
    <string name="title_activity_category_add">CategoryAddActivity</string>
    <string name="sign_nickname_title">프로필 설정</string>
    <string name="sign_nickname_subtitle">사용하실\n닉네임을 입력하세요.</string>
    <string name="sign_tos_subtitle">서비스 이용을 위해\n이용약관 동의가 필요합니다.</string>
    <string name="sign_tos_agree_all">전체 동의</string>
    <string name="sign_tos_1"><u>약관 및 정책</u></string>
    <string name="sign_tos_2"><u>개인정보처리방침</u></string>
    <string name="sign_tos_3">이벤트, 광고성 정보 안내 (선택)</string>
    <string name="sign_havit_start">HAVIT 시작하기</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="category_length_limit">/ 15</string>
    <string name="category_length_limit_space">&#160;/ 15</string>
    <string name="category_length_count_zero">0</string>
    <string name="duplicate_category">중복된 카테고리 이름이 존재합니다</string>
    <string name="url_unavailable">입력한 URL 링크 정보를 찾을 수 없습니다.</string>
    <string name="contents_havit_complete">콘텐츠 확인 완료 !</string>
    <string name="notification_will_alarm">알림 예정</string>
    <string name="notification_done_alarm">지난 알림</string>
    <string name="notification_complete">알림 완료</string>
    <string name="notification_will_alarm_empty">알림 예정인 콘텐츠가 없습니다.</string>
    <string name="notification_done_alarm_empty">지난 알림 콘텐츠가 없습니다.</string>
    <string name="home_popup_description0">콘텐츠를 저장해보세요!</string>
    <string name="home_popup_description1">비상이에요! 확인하지 않은 콘텐츠가 많이 있어요!</string>
    <string name="home_popup_description2">밀린 콘텐츠를 확인해 보는 건 어떨까요?</string>
    <string name="home_popup_description3">저장한 콘텐츠가 밀리지 않도록 조심하세요!</string>
    <string name="home_popup_description4">축하드려요! 저장한 콘텐츠를 전부 확인했어요!</string>
    <string name="contents_order">정렬</string>
    <string name="category_create_recommend">카테고리를 생성하여 콘텐츠를 쉽게 정리해보세요.</string>
    <string name="cancel">취소</string>
    <string name="exit">나가기</string>
    <string name="remove">삭제</string>
    <string name="cancel_edit_category_title">카테고리 수정 취소</string>
    <string name="cancel_edit_category_description">수정을 취소하고 나가시겠습니까?\n수정한 내용은 저장되지 않습니다.</string>
    <string name="cancel_save_contents_title">콘텐츠 저장 취소</string>
    <string name="cancel_save_contents_description">콘텐츠 저장을 취소하고 나가시겠습니까?\n진행한 내용은 저장되지 않습니다.</string>
    <string name="cancel_edit_title_title">제목 수정 취소</string>
    <string name="cancel_edit_title_description">제목 수정을 취소하고 나가시겠습니까?\n입력한 내용은 저장되지 않습니다.</string>
    <string name="cancel_set_notification_title">알림 설정 취소</string>
    <string name="cancel_set_notification_description">알림 설정을 취소하고 나가시겠습니까?\n진행한 내용은 저장되지 않습니다.</string>
    <string name="remove_category_title">카테고리 삭제</string>
    <string name="remove_category_description">해당 카테고리를 삭제하시겠습니까?\n카테고리 내 콘텐츠도 함께 삭제됩니다.</string>
    <string name="remove_notification_title">알림 삭제</string>
    <string name="remove_notification_description">설정한 알림을 삭제하시겠습니까?\n다시 새로운 알림을 설정할 수 있습니다.</string>
    <string name="remove_contents_title">콘텐츠 삭제</string>
    <string name="remove_contents_description">해당 콘텐츠를 삭제하시겠습니까?\n삭제한 콘텐츠는 되돌릴 수 없습니다.</string>
    <string name="logout_description">정말 로그아웃 하시겠습니까?</string>
    <string name="contents_category_close">닫기</string>
    <string name="url_hint">https://www.example.com/</string>
    <string name="ic_alarm">ic_alarm</string>
    <string name="select_complete">선택 완료</string>
    <string name="noti_divider">ㅣ</string>
    <string name="setting">설정</string>
    <string name="setting_nickname_end">님</string>
    <string name="setting_modify">프로필 수정</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="service_info">서비스 정보</string>
    <string name="service_notice">공지사항</string>
    <string name="service_policy">약관 및 정책</string>
    <string name="service_how_to_use">서비스 이용방법</string>
    <string name="service_personal_data">개인정보 처리 방침</string>
    <string name="help_and_others">도움말 및 기타</string>
    <string name="customer_center">고객 센터</string>
    <string name="customer_center_email">havitofficial29@gmail.com</string>
    <string name="version_info">버전 정보</string>
    <string name="logout">로그아웃</string>
    <string name="latest_version">최신 버전</string>
    <string name="update">업데이트</string>
    <string name="unregister">회원 탈퇴</string>
    <string name="save_contents_state">나의 콘텐츠 저장 현황</string>
    <string name="onboarding_save_contents">콘텐츠 저장</string>
    <string name="onboarding_save_in_category">카테고리에 저장</string>
    <string name="onboarding_save_in_category_description">카테고리 생성 후 원하는 카테고리에\n콘텐츠를 저장할 수 있어요.</string>
    <string name="onboarding_save_in_category_tip">여러개의 카테고리에 콘텐츠를 중복으로 저장할 수 있어요</string>
</resources>