<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category"
        android:checked="false"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/ic_mypage"
        android:checked="false"
        app:showAsAction="withText"
        android:title="@string/title_my_page" />

    <item
        android:id="@+id/blank"
        android:enabled="false"
        app:showAsAction="never"
        android:title="blank" />

</menu>