<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/havit_white"
    tools:context=".ui.onboarding.OnboardingThirdFragment">

    <TextView
        android:id="@+id/tv_onboarding_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/rectangle_gray_1_radius_11"
        android:paddingHorizontal="9dp"
        android:paddingVertical="3dp"
        android:text="@string/onboarding_save_contents"
        android:textAppearance="@style/Text12Semibold"
        android:textColor="@color/gray_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_save_in_category"
        android:textAppearance="@style/Header22Semibold"
        android:textColor="@color/purple_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_category" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/onboarding_save_in_category_description"
        android:textAppearance="@style/Medium15"
        android:textColor="@color/gray_5"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/onboarding_save_in_category_tip"
        android:textAppearance="@style/Sub12Regular"
        android:textColor="@color/gray_3"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:src="@drawable/img_onboarding_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip" />
</androidx.constraintlayout.widget.ConstraintLayout>