<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.share.AddCategoryFragment">

    <TextView
        android:id="@+id/tv_enter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="39dp"
        android:text="@string/enter_category"
        android:textAppearance="@style/Header22Semibold"
        android:textColor="@color/gray_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:text="@string/title"
        android:textAppearance="@style/Text14Semibold"
        android:textColor="@color/havit_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_title" />

    <EditText
        android:id="@+id/et_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/havit_purple"
        android:hint="카테고리 제목 입력"
        android:textAppearance="@style/Header19Medium"
        android:textColor="@color/havit_gray"
        android:textColorHint="@color/gray_2"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/rectangle_gray_2"
        android:text="@string/next"
        android:textAppearance="@style/Text16Semibold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>