<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.share.ChooseIconFragment">

    <TextView
        android:id="@+id/tv_choose_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="39dp"
        android:text="@string/choose_icon"
        android:textAppearance="@style/Header22Semibold"
        android:textColor="@color/gray_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:text="@string/icon_kr"
        android:textAppearance="@style/Text14Semibold"
        android:textColor="@color/havit_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:spanCount="5"
        tools:itemCount="15"
        tools:listitem="@layout/item_category_icon">


    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@drawable/rectangle_purple"
        android:paddingBottom="22dp"
        android:text="@string/next"
        android:textAppearance="@style/Text16Semibold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>